--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    background-color: #f7f8f8;
+    background-color: rgb(247, 248, 248);
     padding-bottom: 10px;
     position: sticky;
     top: 0;
@@ -14,33 +14,44 @@ header {
 
 .nav1 {
     padding-top: 0.8rem;
+    max-width: 1280px;
+    margin: 0px auto;
+    padding-bottom: 1rem;
+}
+
+
+.hamburger {
+    margin-top: 7px;
+    visibility: hidden;
+    display: none !important;
+}
+
+.line {
+    width: 20px;
+    height: 1px;
+    color: black;
+    border: 1px solid black;
+    margin: 3px;
 }
 
 .logo1 {
     width: 40px;
     height: 28px;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    padding-bottom: 1rem;
+    margin-right: 3rem;
+    padding-top: 2px;
 }
-
-.mr-2rem {
-    margin-right: 2rem;
-}
-
 
 .nav1-logo {
     width: 30px;
     height: 28px;
-    padding-bottom: 1rem;
     margin-right: 3px;
 }
 
 .nav1-text {
     color: rgb(61, 60, 60);
-    padding-bottom: 1rem;
     margin-top: 0.5rem;
     font-size: 12px;
+    margin-right: 3rem;
 }
 
 .nav1-text:hover {
@@ -49,27 +60,53 @@ header {
 
 .nav2 {
     padding-top: 0.2rem;
+    max-width: 1280px;
+    margin: 0px auto;
 }
 
 .logo2 {
     width: 60px;
     height: 35px;
-    margin-left: 2rem;
-    margin-right: 2.5rem;
+    margin-right: 1.5rem;
     padding-top: 0.5rem;
 }
 
-#Search1 {
-    background-image: url(https://img.uxwing.com/wp-content/themes/uxwing/download/user-interface/search-icon.png), url(https://www.olx.com.pk/assets/iconArrowDown_noinline.ec05eae7013321c193965ef15d4e2174.svg);
+#Input1 {
 
-    background-position: left center, right center;
-    padding: 13px 20px 13px 28px;
-    background-size: 25px;
-    width: 260px;
+    padding: 13px 5px 13px 10px;
+    width: 230px;
     font-size: medium;
+    background: none;
+    border: none;
+    outline: none;
 }
 
-#Search2 {
+.nav2-icon {
+    width: 16px;
+    height: 16px;
+    margin-left: 5px;
+    cursor: pointer;
+
+}
+
+.Search1 {
+    border: 2px solid black;
+    margin-left: 15px;
+    padding: 0px 15px 0px 0px;
+    width: 270px;
+    font-size: medium;
+    background-color: white;
+}
+
+.Search1-992px {
+    display: none !important;
+}
+
+.nav2-992px {
+    display: none !important;
+}
+
+#Input2 {
     margin-left: 15px;
     padding: 13px 15px 13px 32px;
     width: 650px;
@@ -79,6 +116,7 @@ header {
 button {
     width: 50px;
     height: inherit;
+    cursor: pointer;
 }
 
 .login {
@@ -105,21 +143,35 @@ button {
     top: -1px;
 }
 
+.sell-button-992px {
+    display: none !important;
+    /* visibility: collapse !important; */
+}
+
 .main-nav {
-    padding: 20px;
-    font-size: medium;
+    padding: 1rem 0.8rem;
+    font-size: small;
     box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
 }
 
-
 .category {
-    margin-right: 20px;
+    width: 1280px;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 15px;
+    align-items: center;
+
 }
 
 .category-arrow {
-    width: 15px;
-    height: 15px;
-    margin: 1px 4px;
+    width: 19px;
+    height: 19px;
+    margin: 1px 10px;
+}
+
+.features-list {
+    padding-inline-start: 20px;
+
 }
 
 .features-list li a:hover {
@@ -133,13 +185,26 @@ button {
 }
 
 .main-image {
-    width: 1325px;
-    padding: 10px 10px;
+    width: 90vw;
+    padding: 15px 65px;
+}
+
+@media only screen and (min-width:993px) {
+
+    .nav-category {
+        display: none !important;
+    }
+
+}
+
+.cards {
+    max-width: 1280px;
+    margin: auto;
+    padding: auto;
 }
 
 .card-head {
     font-size: x-large;
-    padding: 10px 40px;
 }
 
 .cards-list {
@@ -153,6 +218,11 @@ button {
     height: 400px;
     margin: 10px;
     background-color: #f7f8f9;
+}
+
+.card img {
+    width: 310px;
+    height: 200px;
 }
 
 .card-price {
@@ -179,19 +249,29 @@ button {
     max-height: fit-content;
 }
 
+.Load-btn {
+    padding: 15px 0px;
+    /* display: none !important; */
+}
+
+.button {
+    padding: 0px;
+    width: 120px;
+    height: 50px;
+    border-radius: 5px;
+    background-color: white;
+    font-size: large;
+}
+
 .main-end {
     height: 200px;
     background-color: #f7f8f8;
+    justify-content: center;
 
 }
 
 .MobImg {
-    width: 450px;
     height: -webkit-fill-available;
-}
-
-.olxapp-description {
-    width: 450px;
 }
 
 
@@ -204,6 +284,7 @@ button {
     font-size: larger;
     margin-left: 40px;
     margin-right: 40px;
+    max-width: 25rem;
 }
 
 .vertical-line {
@@ -232,11 +313,15 @@ button {
 .footer-top {
     background-color: #ebeeef;
     border-top: 1px solid rgba(0, 47, 52, .2);
+    padding: 20px 0px 50px 0px;
+
+
 }
 
 .footer-top-features {
-    padding: 30px 0px 80px 0px;
-    margin: 0px 35px;
+    max-width: 1280px;
+    margin: auto;
+    padding: auto;
 }
 
 .footer-top-features-list ul li {
@@ -274,4 +359,336 @@ button {
     background-color: #002f34;
     color: #fff;
     font-size: 12px;
+    text-align: right;
+}
+
+.footer-top-992px {
+    display: none !important;
+}
+
+
+@media only screen and (max-width:992px) {
+
+    header {
+        background-color: rgb(247, 248, 248);
+        padding-bottom: 10px;
+        position: sticky;
+        top: 0;
+        z-index: 6;
+    }
+
+    .nav1 {
+        padding-top: 0.8rem;
+        justify-content: space-between;
+        margin: 0px 5px;
+        padding-bottom: 0rem;
+    }
+
+    .hamburger {
+        margin-top: 7px;
+        visibility: visible;
+        display: block !important;
+    }
+
+    .line {
+        width: 20px;
+        height: 1px;
+        color: black;
+        border: 1px solid black;
+        margin: 3px;
+    }
+
+    .logo1 {
+        width: 40px;
+        height: 28px;
+        margin-right: 3rem;
+        padding-top: 2px;
+
+    }
+
+    .nav1-logo {
+        width: 30px;
+        height: 28px;
+    }
+
+    .nav1-text {
+        color: rgb(61, 60, 60);
+        margin-top: 0.5rem;
+        font-size: 12px;
+        margin-right: 5px;
+    }
+
+    .nav1-text:hover {
+        color: blue;
+    }
+
+    .nav2 {
+        display: none !important;
+        visibility: collapse;
+    }
+
+    #Input1-992px {
+        padding: 13px 5px 13px 10px;
+        width: 230px;
+        font-size: medium;
+        background: none;
+        border: none;
+        outline: none;
+    }
+
+    .nav2-icon-992px {
+        width: 16px;
+        height: 16px;
+        margin-left: 5px;
+    }
+
+    .Search1-992px {
+        box-shadow: 0 1px 4px 0 rgba(0, 0, 0, .1);
+        border: 2px solid black;
+        padding: 0px 15px 0px 0px;
+        height: 100%;
+        overflow: hidden;
+        font-size: medium;
+        flex-wrap: nowrap;
+        background-color: white;
+        display: flex !important;
+    }
+
+    .map-logo-992px {
+        width: 16px;
+        height: 16px;
+        margin-right: 10px;
+        display: flex;
+    }
+
+    .nav2-992px {
+        display: flex !important;
+        padding: 10px;
+        margin: 5px 0px;
+    }
+
+    .nav2-arrow-logo-992px {
+        width: 16px;
+        height: 16px;
+        margin-left: 10px;
+        display: flex;
+    }
+
+    .main-nav {
+        display: none !important;
+        visibility: collapse;
+    }
+
+    .MainImg {
+        display: grid;
+        place-items: center;
+    }
+
+    .main-image {
+        max-width: 960px;
+        padding: 15px 20px;
+        height: 170px;
+    }
+
+    .nav-category {
+        padding: 20px 5px;
+
+    }
+
+    .category-text {
+        justify-content: space-between;
+        display: flex;
+        margin-bottom: 10px;
+    }
+
+    .feature-img ul {
+        display: flex;
+        overflow: scroll;
+        margin: 0 calc(4rem - 10vw);
+    }
+
+    .feature-img ul li {
+        text-align: center;
+        text-transform: capitalize;
+        margin: 1rem 0;
+        font-size: 0.5rem;
+        width: 20vw;
+        min-width: 20vw;
+
+    }
+
+    .feature-img ul li img {
+        margin-left: auto;
+        margin-right: auto;
+        height: 48px;
+        width: 48px;
+        background-color: transparent;
+    }
+
+    .feture-img-list {
+        display: flex;
+    }
+
+    .cards {
+        max-width: 100vw;
+        margin: auto;
+        padding: auto;
+    }
+
+    .card-head {
+        font-size: x-large;
+    }
+
+    .cards-list {
+        margin-bottom: 20px;
+    }
+
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 215px;
+        height: 350px;
+        margin: 10px;
+        background-color: #f7f8f9;
+    }
+
+    .card img {
+        width: 215px;
+        height: 150px;
+    }
+
+    .card-price {
+        font-size: large;
+        margin: 10px;
+    }
+
+    .card-describe {
+        font-size: 13px;
+        min-height: 90px;
+    }
+
+    .area {
+
+        font-size: small;
+    }
+
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    }
+
+    .container {
+        padding: 2px 16px;
+        max-height: fit-content;
+    }
+
+    .main-end {
+        display: none !important;
+        visibility: collapse;
+    }
+
+    .footer-top {
+        display: none !important;
+        visibility: collapse;
+    }
+
+    .footer-top-992px {
+        display: block !important;
+        max-width: 990px;
+
+    }
+
+    .footer-category {
+        justify-content: space-between;
+        display: flex;
+        padding: 20px 13px;
+        border-top: 1px solid black;
+
+    }
+
+    .footer-follow {
+        display: flex;
+        padding: 25px 13px;
+        border-top: 1px solid black;
+        justify-content: space-between;
+
+
+    }
+
+    .left-arrow {
+        width: 16px;
+        height: 16px;
+        align-items: center;
+        display: flex;
+    }
+
+    .icons {
+        display: flex;
+    }
+
+    .icon-sizes {
+        width: 24px;
+        height: 24px;
+    }
+
+    .footer-icons {
+        justify-content: center;
+        display: flex;
+        padding: 20px 13px;
+        border-top: 1px solid black;
+    }
+
+    .bottom-text {
+        padding: 1.2rem 1.8rem 1.6rem 1.8rem;
+        background-color: #002f34;
+        color: #fff;
+        font-size: 12px;
+        text-align: center;
+    }
+
+    /* .Load-btn {
+        padding: 15px 0px;
+        display:block !important;
+    }
+    
+    .button {
+        padding: 0px;
+        width: 120px;
+        height: 50px;
+        border-radius: 5px;
+        background-color: white;
+        font-size: large;
+    } */
+
+
+
+
+
+    .sell-button-992px {
+        display: block !important;
+        /* position: fixed; */
+    }
+
+    .sell-icon-992px {
+        position: absolute;
+        top: 63vw;
+        left: 45vw;
+    }
+
+    .plus-icon-992px {
+        position: absolute;
+        width: 15px;
+        height: 15px;
+        top: 38rem;
+        left: 28rem;
+        z-index: 1;
+    }
+
+    .sell-text-992px {
+        margin: 2px;
+        position: absolute;
+        top: 37.8rem;
+        left: 29rem;
+    }
+
+
 }
