--- a/utilities.css
+++ b/utilities.css
@@ -84,12 +84,17 @@
     position: relative;
 }
 
-.text-right
-{
-    text-align: right;
-}
 
 .justify-center
   {
     justify-content: center;
   }
+
+.item-center {
+    align-items: center;
+}
+
+.text-center
+{
+    text-align: center;
+}
